css/custom.css
body {
	font-family: "Roboto", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
	color:white;
	background:#111;
	font-weight:200;
	margin:0;
}

h1, h2, h3, h4, h5, h6 {
	font-weight: 300;
	margin:0;
}

a,a:hover {
	text-decoration:none;
	text-transform:uppercase;
}

a {
	color:#fff;
}

a:hover {
	color:#D83304;
}

.row {
	margin:0;
}

#two-cols {
	-moz-column-count: 2;
	-moz-column-gap: 20px;
	-webkit-column-count: 2;
	-webkit-column-gap: 20px;
	column-count: 2;
	column-gap: 20px;
}

.kii_label {
  background:black;
	width:270px;
	min-height:60px;
	position:absolute;
	top:60%;
	left:15%;
}
.kii_text {
	text-transform:uppercase;
	letter-spacing:1;
	position:absolute;
	top:-40%;
	left:5%;
	z-index:1;
}

.ak_text {
	text-transform:uppercase;
	letter-spacing:1;
	position:absolute;
	top:65%;
	left:35%;
	z-index:1;
}

.photo_credit {
	font-size:10px;
	position:absolute;
	right:3%;
	bottom:0;
}

#music {
	position:absolute;
	padding:60px;
	text-transform:uppercase;
}

#copyright {
	color:#fff;
	z-index:999;
	font-size:10px;
	text-align:center;
	padding:5px;
	margin:0;
	background-color:black;
}

#player {
	width:250px;
}


/* FULLSCREEN_IMAGES
	****************************************************************************************
	****************************************************************************************
	****************************************************************************************
	****************************************************************************************
	*/

/* via http://www.minimit.com/demos/fullscreen-backgrounds-with-centered-content */

.background {
	background-repeat:no-repeat;
	background-attachment: fixed;
	background-position:50% 50%; /* custom */
	/* background-position:50% 50%\9 */ !important; /* ie8 graceful degradation */
}

/* fullscreen setup */
html, body {
	height:100%;
}

.fullscreen,
.content-a {
	width:100%;
	height:100%;
	overflow:hidden;
	margin: 0 auto;
}

.fullscreen.overflow,
.fullscreen.overflow .content-a {
	height:auto;
	min-height:100%;
}

/* content centering */
.content-a {
	display:table;
}

.content-b {
	display:table-cell;
	position:relative;
	vertical-align:middle;
	text-align:left;
}

section {
	background:#222;
}

.not-fullscreen {
	height:50%;
}



/* MODAL
	****************************************************************************************
	****************************************************************************************
	****************************************************************************************
	****************************************************************************************
*/


/* background */

.modal {
	display: none; /* Hidden by default */
	z-index: 1; /* Sit on top */
	position: fixed;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
	overflow: auto; /* TODO for box or bg Enable scroll if needed */
	background-color: rgb(0,0,0); /* Fallback color */
	background-color: rgba(0,0,0,0.8); /* Black w/ opacity */
}



/* box via https://stackoverflow.com/questions/5012111/how-to-position-a-div-in-the-middle-of-the-screen-when-the-page-is-bigger-than-t */
.modal-content {
	top: 50%;
	left: 50%;
	width:500px;
	height:500px;
	margin-top: -250px; /*set to a negative number 1/2 of your height*/
	margin-left: -250px; /*set to a negative number 1/2 of your width*/
	
	background-color:black;
	color:white;
	position:fixed;
	padding:20px;
}

/* The Close Button */
.close-btn {
	color: white;
	float: right;
	font-size: 30px;
	font-weight: 100;
}

.close-btn:hover,
.close-btn:focus {
	color: red;
	text-decoration: none;
	cursor: pointer;
}

@media (max-width: 450px) {
	.modal-content {
		width:300px;
		height:300px;
		margin-top: -150px; /*set to a negative number 1/2 of your height*/
		margin-left: -150px; /*set to a negative number 1/2 of your width*/
	}
}


/* MASONRY_GRID
	****************************************************************************************
	****************************************************************************************
	****************************************************************************************
	****************************************************************************************
 */


* { box-sizing: border-box; }

/* force scrollbar */
html { overflow-y: scroll; }


/* ---- grid ---- */

.grid {
	margin: 5% auto;
	max-width:640px;
	height:100%;
}

/* clear fix */
.grid:after {
	content: '';
	display: block;
	clear: both;
}

/* ---- .grid-item ---- */

.grid-sizer,
.grid-item {
	width: 300px;
	height: 300px;
}

.grid-item {
	float: left;
	/* vertical gutter */
	margin:10px auto;
}

.grid-item img {
	display: block;
	max-width: 100%;
	
}

img.fit {
	width: 300px;
	height: 300px;
	-o-object-fit: contain;
	object-fit: contain;
	object-fit:cover;
}

@media (max-width: 650px) {
	.grid {
		max-width:300px;
	}
}


@media (max-width: 450px) {
	
	.grid-item {
		width: 290px;
		height: 290px;
	}
}


/* NAVBAR
	****************************************************************************************
	****************************************************************************************
	****************************************************************************************
	****************************************************************************************
*/
#navbar-placement {
	display:inline-block;
}

.navbar {
	overflow:hidden;
	background-color:black;
	position:fixed;
	width:100%;
	z-index:99;
	text-align:center;
}

.navbar a {
	float:left;
	color:white;
	text-align:center;
	padding:14px 16px;
	font-size:1.5rem;
}

.navbar hover {
	color:red;
}

.navbar .menu_icon {
	display:none;
}


@media screen and (max-width: 600px) {
	.navbar a:not(:first-child) {display: none;} /* hide all but first element */
	.navbar a.menu_icon {
		float: right;
		display: block;
	}
	#navbar-placement {
		display:block;
	}
}

@media screen and (max-width: 600px) {
	.navbar.responsive {position: fixed;}
	.navbar.responsive .menu_icon {
		position: absolute;
		right: 0;
		top: 0;
	}
	.navbar.responsive a {
		float: none;
		display: block;
		text-align: left;
	}
	
}

